--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -42,13 +42,13 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
-      - name: Go to Jekyll directory
-        run: cd ./_web
       - name: Install dependencies
         run: bundle install
+        working-directory: ./_web
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+        working-directory: ./_web
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
