--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -53,8 +53,9 @@ jobs:
           JEKYLL_ENV: production
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
-        path: _web/_site/
         uses: actions/upload-pages-artifact@v1
+        with:
+          path: _web/_site/
 
   # Deployment job
   deploy:
