--- a/_web/_config.yml
+++ b/_web/_config.yml
@@ -31,6 +31,7 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
 
+baseurl: /community-lab
 repository: DataDog/community-lab
 domain: datadoghq.dev       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 url: https://datadoghq.dev/community-lab/  # the base hostname and protocol for your site, e.g. http://example.com
