--- a/_web/_config.yml
+++ b/_web/_config.yml
@@ -18,11 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Datadog comunity Lab
+title: Datadog community Lab
 email: antonin.bruneau@datadoghq.com
 description: >- # this means to ignore newlines until "baseurl:"
   A place to share your best Datadog  dashboards, monitors, and more
-  with the comunity
+  with the community
 twitter_username: bruneauantonin
 github_username:  abruneau
 
